Adding Lexik's JWT bundle

--- a/.env.dist
+++ b/.env.dist
@@ -13,13 +13,15 @@ POSTGRES_PASSWORD=friendsquest
 SYMFONY_ENV=dev
 APP_ENV=dev
 
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=azerty
+
 ##################
 #   MAIL SETUP   #
 ##################
 CONFIRMATION_REGISTRATION=true
 
 MAILER_URL=smtp://mailcatcher:1025/
-
 MAILER_ADDRESS=postmaster@friendsquest.dev
 MAILER_NAME=FriendsQuest
-
