--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "friendsofsymfony/user-bundle": "^2.1",
+        "lexik/jwt-authentication-bundle": "^2.5",
         "ramsey/uuid-doctrine": "^1.4",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^4.1",
