--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,29 +1,36 @@
 security:
     encoders:
-      FOS\UserBundle\Model\UserInterface: bcrypt
+      App\Entity\User: bcrypt
 
     role_hierarchy:
       ROLE_ADMIN: ROLE_PLAYER
 
     providers:
-      fos_userbundle:
-        id: fos_user.user_provider.username
+      friendsquest_provider:
+        entity:
+          class: App\Entity\User
+          property: username
 
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
+        login:
+          anonymous: ~
+          pattern: ^/login
+
+          json_login:
+            check_path: login
+
+          provider: friendsquest_provider
+
         main:
-            pattern: ^/
-            form_login:
-              provider: fos_userbundle
-              csrf_token_generator: security.csrf.token_manager
-            logout: true
-            anonymous: true
+            pattern: ^/api
+            anonymous: ~
+
+            provider: friendsquest_provider
 
     access_control:
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/, role: ROLE_USER }
         - { path: ^/admin/, role: ROLE_ADMIN }
