Updating env file

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,28 @@
 # Environment files containing the config and more importantly crendentials
 .env
 .env.prod
+env
+env.prod
 
 # Private key for user management
 /config/jwt/*.pem
+
+###> symfony/framework-bundle ###
+/.env
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
+
+###> symfony/phpunit-bridge ###
+.phpunit
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> symfony/web-server-bundle ###
+/.web-server-pid
+###< symfony/web-server-bundle ###
