--- a/env.dist
+++ b/env.dist
@@ -12,6 +12,7 @@ POSTGRES_PASSWORD=friendsquest
 ###################
 SYMFONY_ENV=dev
 APP_ENV=dev
+APP_SECRET=c119457206b9dff7aed9423774475384
 
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
@@ -25,3 +26,5 @@ CONFIRMATION_REGISTRATION=true
 MAILER_URL=smtp://mailcatcher:1025/
 MAILER_ADDRESS=postmaster@friendsquest.dev
 MAILER_NAME=FriendsQuest
+
+
