A tiny bit better friendship system but still meh

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -2,6 +2,9 @@ framework:
     templating:
       engines: twig
 
+    serializer:
+      enabled: true
+
     secret: '%env(APP_SECRET)%'
     session:
         handler_id: ~
