--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-iconv": "*",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
         "friendsofsymfony/rest-bundle": "^2.3",
+        "gesdinet/jwt-refresh-token-bundle": "^0.4.0",
         "lexik/jwt-authentication-bundle": "^2.5",
         "ramsey/uuid-doctrine": "^1.4",
         "sensio/framework-extra-bundle": "^5.1",
