--- a/config/routes/user_routes.yaml
+++ b/config/routes/user_routes.yaml
@@ -1,3 +1,7 @@
 login_check:
     path:     /login
     methods: [POST]
+
+gesdinet_jwt_refresh_token:
+  path: /api/token/refresh
+  defaults: { _controller: gesdinet.jwtrefreshtoken:refresh }
