Picture uploading & resizing looks ok for now

--- a/env.dist
+++ b/env.dist
@@ -14,6 +14,12 @@ SYMFONY_ENV=dev
 APP_ENV=dev
 APP_SECRET=c119457206b9dff7aed9423774475384
 
+USER_PICTURES_DIR=/www/public/userimages/
+USER_PICTURE_SMALL_MAXWIDTH=500
+USER_PICTURE_SMALL_MAXHEIGHT=500
+USER_PICTURE_LARGE_MAXWIDTH=1200
+USER_PICTURE_LARGE_MAXHEIGHT=1200
+
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=azerty
