--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -15,3 +15,4 @@ framework:
     cache:
         #app: cache.adapter.redis
         #default_redis_provider: redis://localhost
+    csrf_protection: false
