--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,27 +5,28 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
+    user_image_path: '%env(USER_PICTURES_DIR)%'
+    smallPictureMaxWidth: '%env(USER_PICTURE_SMALL_MAXWIDTH)%'
+    smallPictureMaxHeight: '%env(USER_PICTURE_SMALL_MAXHEIGHT)%'
+    largePictureMaxWidth: '%env(USER_PICTURE_LARGE_MAXWIDTH)%'
+    largePictureMaxHeight: '%env(USER_PICTURE_LARGE_MAXHEIGHT)%'
 
 services:
-    # default configuration for services in *this* file
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-        public: false       # Allows optimizing the container by removing unused services; this also means
-                            # fetching services directly from the container via $container->get() won't work.
-                            # The best practice is to be explicit about your dependencies anyway.
+        autowire: true
+        autoconfigure: true
+        public: false
+        bind:
+          $userImagePath: '%user_image_path%'
+          $smallPictureMaxWidth: '%smallPictureMaxWidth%'
+          $smallPictureMaxHeight: '%smallPictureMaxHeight%'
+          $largePictureMaxWidth: '%largePictureMaxWidth%'
+          $largePictureMaxHeight: '%largePictureMaxHeight%'
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/*'
         exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
 
-    # controllers are imported separately to make sure services can be injected
-    # as action arguments even if you don't extend any base controller class
     App\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
-
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
